Fix overflow issue on training cards

--- a/common/static/common/styles/studio/_card.scss
+++ b/common/static/common/styles/studio/_card.scss
@@ -143,6 +143,8 @@
 
     &:last-child {
       margin-right: 0;
+      overflow:hidden!important;
+      text-overflow: ellipsis;
     }
   }
 
